Updated Nav bar & fix spacing v3

--- a/main.css
+++ b/main.css
@@ -63,6 +63,10 @@ section{
     
   }
 
+#special-button{
+  
+}
+
 #name{
   animation: flow 10s ease-in-out infinite;
   background: linear-gradient(-60deg, #904e95, #904e95, #e73c7e, #ee7752);
@@ -141,6 +145,12 @@ section{
   margin: 5px;
 }
 
+.topnav a.special-button {
+  background-color: rgba(255, 55, 30, .4);
+  border-radius: .5rem;
+  color: black;
+}
+
 .topnav a:hover {
   background-color: rgba(0, 0, 0, .2);
   color: black;
@@ -151,4 +161,4 @@ section{
   background-color: rgba(0, 0, 0, .9);
   border-radius: .5rem;
   color: white;
-  
+}
